# Inspection_Cell

./: README.md
inspection_cell_description/: CMakeLists.txt  package.xml
inspection_cell_description/config/: initial_positions.yaml  inspection_cell.rviz  joint_limits.yaml  my_robot_calibration.yaml  ros2_controllers.yaml  ros2_controllers_v2.yaml
inspection_cell_description/config/alpha/: default_kinematics_ur5e.yaml  joint_limits.yaml  kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
inspection_cell_description/config/beta/: default_kinematics_turntable.yaml  initial_positions.yaml  initial_positions_backup.yaml  joint_limits.yaml  joint_limits_backup.yaml  kinematics.yaml  my_robot_calibration.yaml  visual_parameters.yaml
inspection_cell_description/config/cell_alpha/: default_kinematics.yaml  initial_positions_backup.yaml
inspection_cell_description/launch/: inspection_cell_control.launch.py  inspection_cell_hw.launch.py  inspection_cell_sim.launch.py  test_hw.launch.py  test_sim.launch.py  test_urdf.launch.py
inspection_cell_description/meshes/visual/: ST-RB-001-0002.dae
inspection_cell_description/rviz/: inspection_cell.rviz  view_robot.rviz
inspection_cell_description/urdf/: inspection_cell.ros2_control.xacro  inspection_cell.urdf  inspection_cell.urdf.xacro  inspection_cell_alpha.urdf.xacro  inspection_cell_beta.urdf.xacro  inspection_cell_macro.xacro  inspection_cell_macro_o.xacro  inspection_cell_o.urdf  inspection_cell_o.urdf.xacro  test.urdf.xacro  test_macro.xacro
inspection_cell_description/urdf/inc/: inspection_cell_common.xacro  inspection_cell_transmissions.xacro
inspection_cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
inspection_cell_moveit_config/config/: asdf_joint_limits.yaml  backup_inspection_cell.urdf.xacro  cell_servo.yaml  initial_positions.yaml  inspection_cell.ros2_control.xacro  inspection_cell.srdf  inspection_cell.srdf.xacro  joint_limits.yaml  kinematics.yaml  motion_planning.yaml  moveit.rviz  moveit_controllers.yaml  moveit_cpp.yaml  ros2_controllers.yaml  sensors_3d.yaml
inspection_cell_moveit_config/config/alpha/: initial_positions.yaml  joint_limits.yaml
inspection_cell_moveit_config/config/beta/: initial_positions.yaml  joint_limits.yaml
inspection_cell_moveit_config/launch/: demo.launch.py  inspection_cell.launch.py  inspection_cell_hw.launch.py  inspection_cell_sim.launch.py  move_group.launch.py  moveit_py.launch.py  moveit_py_test.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
inspection_eoat_description/: CMakeLists.txt  package.xml
inspection_eoat_description/launch/: view.launch.py
inspection_eoat_description/rviz/: view_robot.rviz
inspection_eoat_description/urdf/: inspection_eoat.urdf.xacro  inspection_eoat_macro.urdf.xacro
