<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inspection_cell_description</name>
  <version>0.0.0</version>
  <description>Integration of UR5e robot, turntable, and inspection tool</description>
  <maintainer email="db7529@uw.edu">devansh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ur_description</exec_depend>

  <!-- Component packages -->
  <build_depend>ur_description</build_depend>
  <exec_depend>turntable_description</exec_depend>
  <exec_depend>inspection_eoat_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
